--- a/index.html
+++ b/index.html
@@ -7,10 +7,25 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <script src="suncalc.js"></script>
+    <style>
+        .controls {
+            max-width: 800px;
+            margin: 20px auto;
+            text-align: center;
+        }
+        .controls input, .controls button {
+            margin: 5px;
+            padding: 8px;
+        }
+    </style>
 </head>
 
 <body>
     <moon-clock></moon-clock>
+    <div class="controls">
+        <input type="datetime-local" id="dateTimeControl">
+        <button id="resetButton">Reset to Current Time</button>
+    </div>
 
     <script type="module">
         customElements.define('moon-clock', class extends HTMLElement {
@@ -40,9 +55,58 @@
                 this.radius = this.radius * 0.90;
                 this.shadowRoot.appendChild(canvas);
 
+                // Initialize with current date
+                this.currentDate = new Date();
+                this.isCurrentTimeMode = true;
                 this.drawClock();
 
-                setInterval(() => this.drawClock(), 1000 * 60);
+                // Set up the datetime control
+                const dateTimeControl = document.getElementById('dateTimeControl');
+                const resetButton = document.getElementById('resetButton');
+
+                // Format the current date for the input
+                const formatDateForInput = (date) => {
+                    const year = date.getFullYear();
+                    const month = String(date.getMonth() + 1).padStart(2, '0');
+                    const day = String(date.getDate()).padStart(2, '0');
+                    const hours = String(date.getHours()).padStart(2, '0');
+                    const minutes = String(date.getMinutes()).padStart(2, '0');
+                    return `${year}-${month}-${day}T${hours}:${minutes}`;
+                };
+
+                const now = new Date();
+                dateTimeControl.value = formatDateForInput(now);
+
+                // Add event listeners
+                dateTimeControl.addEventListener('change', (e) => {
+                    this.currentDate = new Date(e.target.value);
+                    this.isCurrentTimeMode = false;
+                    this.drawClock();
+                });
+
+                resetButton.addEventListener('click', () => {
+                    this.currentDate = new Date();
+                    this.isCurrentTimeMode = true;
+                    dateTimeControl.value = formatDateForInput(this.currentDate);
+                    this.drawClock();
+                });
+
+                // Update every minute for real-time mode
+                this.intervalId = setInterval(() => {
+                    // Only update automatically if we're in current time mode
+                    if (this.isCurrentTimeMode) {
+                        this.currentDate = new Date();
+                        dateTimeControl.value = formatDateForInput(this.currentDate);
+                        this.drawClock();
+                    }
+                }, 1000 * 60);
+            }
+
+            disconnectedCallback() {
+                // Clean up interval when component is removed
+                if (this.intervalId) {
+                    clearInterval(this.intervalId);
+                }
             }
 
             drawClock() {
@@ -107,8 +171,18 @@
             }
 
             drawTime() {
-                let moonIllumination = SunCalc.getMoonIllumination();
+                let moonIllumination = SunCalc.getMoonIllumination(this.currentDate);
                 let angle = moonIllumination.phase * 2 * Math.PI;
+
+                // Display current phase percentage
+                this.ctx.font = this.radius * 0.1 + "px arial";
+                this.ctx.textBaseline = "middle";
+                this.ctx.textAlign = "center";
+                this.ctx.fillStyle = "#333";
+                const phasePercent = Math.round(moonIllumination.fraction * 100);
+                this.ctx.fillText(`${phasePercent}% illuminated`, 0, this.radius * 0.5);
+
+                // Draw the hand
                 this.drawHand(angle, this.radius * 0.7, this.radius * 0.05);
             }
 
