--- a/index.html
+++ b/index.html
@@ -3,202 +3,31 @@
 
 <head>
     <meta charset="utf-8">
-    <title>Moon clock</title>
+    <title>Moon Clock</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <script src="suncalc.js"></script>
-    <style>
-        .controls {
-            max-width: 800px;
-            margin: 20px auto;
-            text-align: center;
+    <link rel="stylesheet" href="styles.css">
+    <script type="importmap">
+        {
+            "imports": {
+                "suncalc": "./vendor/suncalc.js"
+            }
         }
-        .controls input, .controls button {
-            margin: 5px;
-            padding: 8px;
-        }
-    </style>
+    </script>
+    <script type="module" src="script.js"></script>
 </head>
 
 <body>
-    <moon-clock></moon-clock>
-    <div class="controls">
-        <input type="datetime-local" id="dateTimeControl">
-        <button id="resetButton">Reset to Current Time</button>
+    <div class="container">
+        <h1 class="title">Moon Phase Clock</h1>
+        <moon-clock></moon-clock>
+        <div class="moon-info" id="moonInfo">
+            <!-- Moon info cards will be inserted here -->
+        </div>
+        <div class="controls">
+            <input type="datetime-local" id="dateTimeControl">
+            <button id="resetButton">Reset to Current Time</button>
+        </div>
     </div>
-
-    <script type="module">
-        customElements.define('moon-clock', class extends HTMLElement {
-            connectedCallback() {
-                this.attachShadow({ mode: 'open' });
-                let style = document.createElement('style');
-                let width = this.shadowRoot.host.parentElement.clientWidth;
-                let maxWidth = 800
-                width = width > maxWidth ? maxWidth : width;
-                let height = width;
-                style.textContent = `
-                    :host {
-                        width: ${width}px;
-                        height: ${height}px;
-                        display: block;
-                        margin: 0 auto;
-                    }
-                `;
-                this.shadowRoot.appendChild(style);
-
-                let canvas = document.createElement('canvas');
-                canvas.width = width
-                canvas.height = height;
-                this.ctx = canvas.getContext('2d');
-                this.radius = canvas.height / 2;
-                this.ctx.translate(this.radius, this.radius);
-                this.radius = this.radius * 0.90;
-                this.shadowRoot.appendChild(canvas);
-
-                // Initialize with current date
-                this.currentDate = new Date();
-                this.isCurrentTimeMode = true;
-                this.drawClock();
-
-                // Set up the datetime control
-                const dateTimeControl = document.getElementById('dateTimeControl');
-                const resetButton = document.getElementById('resetButton');
-
-                // Format the current date for the input
-                const formatDateForInput = (date) => {
-                    const year = date.getFullYear();
-                    const month = String(date.getMonth() + 1).padStart(2, '0');
-                    const day = String(date.getDate()).padStart(2, '0');
-                    const hours = String(date.getHours()).padStart(2, '0');
-                    const minutes = String(date.getMinutes()).padStart(2, '0');
-                    return `${year}-${month}-${day}T${hours}:${minutes}`;
-                };
-
-                const now = new Date();
-                dateTimeControl.value = formatDateForInput(now);
-
-                // Add event listeners
-                dateTimeControl.addEventListener('change', (e) => {
-                    this.currentDate = new Date(e.target.value);
-                    this.isCurrentTimeMode = false;
-                    this.drawClock();
-                });
-
-                resetButton.addEventListener('click', () => {
-                    this.currentDate = new Date();
-                    this.isCurrentTimeMode = true;
-                    dateTimeControl.value = formatDateForInput(this.currentDate);
-                    this.drawClock();
-                });
-
-                // Update every minute for real-time mode
-                this.intervalId = setInterval(() => {
-                    // Only update automatically if we're in current time mode
-                    if (this.isCurrentTimeMode) {
-                        this.currentDate = new Date();
-                        dateTimeControl.value = formatDateForInput(this.currentDate);
-                        this.drawClock();
-                    }
-                }, 1000 * 60);
-            }
-
-            disconnectedCallback() {
-                // Clean up interval when component is removed
-                if (this.intervalId) {
-                    clearInterval(this.intervalId);
-                }
-            }
-
-            drawClock() {
-                this.drawFace();
-                this.drawNumbers();
-                this.drawTime();
-            }
-
-            drawFace() {
-                let grad;
-                this.ctx.beginPath();
-                this.ctx.arc(0, 0, this.radius, 0, 2 * Math.PI);
-                this.ctx.fillStyle = 'white';
-                this.ctx.fill();
-
-                grad = this.ctx.createRadialGradient(0, 0, this.radius * 0.95, 0, 0, this.radius * 1.05);
-                grad.addColorStop(0, '#333');
-                grad.addColorStop(0.5, 'white');
-                grad.addColorStop(1, '#333');
-                this.ctx.strokeStyle = grad;
-                this.ctx.lineWidth = this.radius * 0.1;
-                this.ctx.stroke();
-
-                this.ctx.beginPath();
-                this.ctx.arc(0, 0, this.radius * 0.06, 0, 2 * Math.PI);
-                this.ctx.fillStyle = '#333';
-                this.ctx.fill();
-            }
-
-            drawNumbers() {
-                let ang;
-                let num;
-                this.ctx.font = this.radius * 0.15 + "px arial";
-                this.ctx.textBaseline = "middle";
-                this.ctx.textAlign = "center";
-                for (num = 1; num <= 8; num++) {
-                    ang = num * Math.PI / 4;
-                    this.ctx.rotate(ang);
-                    this.ctx.translate(0, -this.radius * 0.85);
-                    this.ctx.rotate(-ang);
-                    if (num === 1) {
-                        this.ctx.fillText('🌒', 0, 0);
-                    } else if (num === 2) {
-                        this.ctx.fillText('🌓', 0, 0);
-                    } else if (num === 3) {
-                        this.ctx.fillText('🌔', 0, 0);
-                    } else if (num === 4) {
-                        this.ctx.fillText('🌕', 0, 0);
-                    } else if (num === 5) {
-                        this.ctx.fillText('🌖', 0, 0);
-                    } else if (num === 6) {
-                        this.ctx.fillText('🌗', 0, 0);
-                    } else if (num === 7) {
-                        this.ctx.fillText('🌘', 0, 0);
-                    } else if (num === 8) {
-                        this.ctx.fillText('🌑', 0, 0);
-                    }
-                    this.ctx.rotate(ang);
-                    this.ctx.translate(0, this.radius * 0.85);
-                    this.ctx.rotate(-ang);
-                }
-            }
-
-            drawTime() {
-                let moonIllumination = SunCalc.getMoonIllumination(this.currentDate);
-                let angle = moonIllumination.phase * 2 * Math.PI;
-
-                // Display current phase percentage
-                this.ctx.font = this.radius * 0.1 + "px arial";
-                this.ctx.textBaseline = "middle";
-                this.ctx.textAlign = "center";
-                this.ctx.fillStyle = "#333";
-                const phasePercent = Math.round(moonIllumination.fraction * 100);
-                this.ctx.fillText(`${phasePercent}% illuminated`, 0, this.radius * 0.5);
-
-                // Draw the hand
-                this.drawHand(angle, this.radius * 0.7, this.radius * 0.05);
-            }
-
-            drawHand(pos, length, width, color = '#333') {
-                this.ctx.beginPath();
-                this.ctx.lineWidth = width;
-                this.ctx.lineCap = "round";
-                this.ctx.strokeStyle = color;
-                this.ctx.moveTo(0, 0);
-                this.ctx.rotate(pos);
-                this.ctx.lineTo(0, -length);
-                this.ctx.stroke();
-                this.ctx.rotate(-pos);
-            }
-        });
-    </script>
 </body>
-
 </html>
