--- a/index.html
+++ b/index.html
@@ -10,11 +10,13 @@
     <script type="importmap">
         {
             "imports": {
-                "suncalc": "./vendor/suncalc.js"
+                "suncalc": "./vendor/suncalc.js",
+                "three": "https://cdn.jsdelivr.net/npm/three@0.174.0/build/three.module.js",
+                "three/addons/": "https://cdn.jsdelivr.net/npm/three@0.174.0/examples/jsm/"
             }
         }
     </script>
-    <script type="module" src="script.js"></script>
+    <script type="module" src="moon.js"></script>
 </head>
 
 <body>
