--- a/index.html
+++ b/index.html
@@ -21,14 +21,21 @@
 
 <body>
     <div class="container">
-        <h1 class="title">Moon Phase Clock</h1>
-        <moon-clock></moon-clock>
+        <h1 class="title">Moon Phase</h1>
         <div class="moon-info" id="moonInfo">
             <!-- Moon info cards will be inserted here -->
         </div>
         <div class="controls">
-            <input type="datetime-local" id="dateTimeControl">
-            <button id="resetButton">Reset to Current Time</button>
+            <input type="datetime-local" id="dateTimeControl" class="date-control">
+            <div class="button-group">
+                <button id="resetButton">Reset to Current Time</button>
+                <button id="playButton">Play</button>
+            </div>
+            <div class="speed-control">
+                <label for="speedSlider">Speed:</label>
+                <input type="range" id="speedSlider" min="0.1" max="30" step="0.1" value="1">
+                <span id="speedValue">1 day/sec</span>
+            </div>
         </div>
     </div>
 </body>
